--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -41,6 +41,7 @@
       <script src="/js/moment.min.js" type="text/javascript"></script>
       <script src="/js/dialog-polyfill.js"></script>
       <script src="/js/pym.min.js" type="text/javascript"></script>
+      <script src="/js/filesize.min.js" type="text/javascript"></script>
       <script src="/js/compiled/witan.ui.js" type="text/javascript"></script>
   </body>
 </html>
