--- a/resources/public/cards.html
+++ b/resources/public/cards.html
@@ -26,8 +26,9 @@
   </head>
   <body>
       <script src="/js/opentip-native.min.js" type="text/javascript"></script>
-      <script src="/js/moment.min.js" type="text/javascript"></script>
       <script src="/js/dialog-polyfill.js"></script>
+      <script src="/js/filesize.min.js" type="text/javascript"></script>
       <script src="/js/compiled/devcards_devcards.js" type="text/javascript"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/locale/en-gb.js""></script>
   </body>
 </html>
