Add corner logo to Witan UI

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -50,6 +50,7 @@
         <!-- End - Intercom -->
     </head>
     <body>
+        <div id="logo"></div>
         <div id="app"> </div>
         <div id="side"></div>
         <div id="login"></div>
